# sse-service

./: README.md  sse-service.cabal
client/: publisher.html  subscriber.html
src/: Main.hs
